--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-[connections.actas_database_db]
-url = "sqlite:///actas_database.db"
+[connections.actasdatabase_db]
+url = "sqlite:///actasdatabase.db"
